--- a/templates/templated_email/source/account_delete.mjml
+++ b/templates/templated_email/source/account_delete.mjml
@@ -1,30 +1,61 @@
 <mjml>
-  <mj-head>
-    <mj-include path="./shared/styles.mjml" />
-  </mj-head>
-  <mj-body>
-    <mj-raw>
-      {% load i18n %}
-    </mj-raw>
-    <mj-include path="./shared/header.mjml" />
-    <mj-section>
-      <mj-column>
-        <mj-text font-size="16px">
-          {% trans "Hi!" context "Standard e-mail greeting" %}
-        </mj-text>
-        <mj-text>
-          {% blocktrans trimmed context "Account delete e-mail text" %}
-            You're receiving this e-mail because you or someone else has requested a deletion of your user account at {{ site_name }}.<br/>
-            Click the link below to delete your account.
+    <mj-include path="./shared/header.mjml"/>
+    <mj-body background-color="#f0f0f0">
+        <mj-wrapper background-color="#FFFFFF" border-radius="0 0 12px 12px" padding="0" padding-bottom="48px">
+            <mj-section padding="0">
+                <mj-column>
+                    <mj-image
+                            src="https://broskyna.anezka.sk/logo-with-years.svg"
+                            height="48px"
+                            href="https://anezka.sk/"
+                    />
+                </mj-column>
+            </mj-section>
+            <mj-section padding-bottom="0" padding-top="48px" background-color="F1FCF7">
+                <mj-column>
+                    <mj-image src="https://api.broskyna.anezka.sk/static/images/email/password.png" height="188px"
+                              width="324px"/>
+                </mj-column>
+            </mj-section>
+            <mj-section padding="0" background-color="#FFFFFF" background-size="100% 48px" background-repeat="no-repeat"
+                        background-url="https://api.broskyna.anezka.sk/static/images/email/background-transition.png">
+                <mj-spacer height="48"></mj-spacer>
+            </mj-section>
+            <mj-section padding-top="48px">
+                <mj-column>
+                    <mj-text mj-class="title">Odstranenie Vášho účtu</mj-text>
+                    <mj-text>
+                        Tento email ste dostali pretože Vy alebo niekto iny požiadal o&nbsp;<b>zmazanie Vášho účtu</b> na stránke anezka.sk.
+                        <br/>
+                        <br/>
+                        Prosím kliknite na tlačidlo nižšie pre&nbsp;<b>odstránenie Vášho účtu</b>.
+<br/>
+                        Majte prosím na vedomí, že tato akcia je permanentná a nie je možne ju vrátiť.
+                    </mj-text>
+                    <mj-button
+                            href="{{ confirm_url | safe }}"
+                            background-color="#F52D2D"
+                            padding-top="12px">Odstrániť môj účet
+                    </mj-button>
 
-            Please note that this action is permanent and cannot be reversed.
-          {% endblocktrans %}
-        </mj-text>
-        <mj-text>
-          <a href="{{ delete_url }}">{{ delete_url }}</a>
-          </mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-include path="./shared/footer.mjml" />
-  </mj-body>
+                    <mj-text
+                            padding-top="20px"
+                            line-height="20px"
+                            font-size="12px"
+                            padding-bottom="0"
+                    >
+                        <a href="{{ delete_url }}" style="color: #F52D2D">
+                            {{ delete_url }}
+                        </a>
+                    </mj-text>
+
+                    <mj-text padding-top="20px" line-height="20px" font-size="12px">Odkaz bude platný 24 hodin.
+                        <br/>
+                        Ak ste o odstránenie účtu nepožiadali, tento e-mail môžete ignorovať.
+                    </mj-text>
+                </mj-column>
+            </mj-section>
+        </mj-wrapper>
+        <mj-include path="./shared/footer.mjml"/>
+    </mj-body>
 </mjml>
