--- a/templates/templated_email/source/test_account_update.mjml
+++ b/templates/templated_email/source/test_account_update.mjml
@@ -1,5 +1,5 @@
 <mjml>
-    <mj-include path="./shared/header.mjml"/>
+    <mj-include path="./shared/header.mjml" />
     <mj-body background-color="#f0f0f0">
         <mj-wrapper background-color="#FFFFFF" border-radius="0 0 12px 12px" padding="0" padding-bottom="48px">
             <mj-section padding="0">
@@ -23,13 +23,17 @@
             </mj-section>
             <mj-section padding-top="48px">
                 <mj-column>
-                    <mj-text mj-class="title">Zmena e‑mailovej adresy</mj-text>
-                    <mj-text>Tento email ste dostali pretože, Vy alebo niekto iný zmenil emailovú adresu pre Váš účet na stránke anezka.sk</mj-text>
-
-                    <mj-text padding-top="20px" line-height="20px" font-size="12px">Ak ste o túto zmenu nepožiadali, kontaktujte prosím Administrátora</mj-text>
+                    <mj-text mj-class="title">Zabudnuté heslo</mj-text>
+                    <mj-text>Zažiadali ste o&nbsp;<b>zmenu hesla</b>. Pre potvrdenie kliknite na tlačidlo nižšie.
+                    </mj-text>
+                    <mj-button padding-top="12px">Resetovať heslo</mj-button>
+                    <mj-text padding-top="20px" line-height="20px" font-size="12px">Odkaz bude platný 24 hodin.
+                        <br/>
+                        Ak ste o obnovenie hesla nepožiadali, tento e-mail môžete ignorovať.
+                    </mj-text>
                 </mj-column>
             </mj-section>
         </mj-wrapper>
-        <mj-include path="./shared/footer.mjml"/>
+        <mj-include path="./shared/footer.mjml" />
     </mj-body>
 </mjml>
