--- a/templates/templated_email/compiled/set_password.html
+++ b/templates/templated_email/compiled/set_password.html
@@ -185,9 +185,9 @@
       <![endif]-->
     
       
-      <div style="background:F1FCF7;background-color:F1FCF7;margin:0px auto;max-width:600px;">
+      <div style="background:#F1FCF7;background-color:#F1FCF7;margin:0px auto;max-width:600px;">
         
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:F1FCF7;background-color:F1FCF7;width:100%;">
+        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F1FCF7;background-color:#F1FCF7;width:100%;">
           <tbody>
             <tr>
               <td style="direction: ltr; font-size: 0px; padding: 0; padding-bottom: 0; padding-top: 48px; text-align: center;" align="center">
@@ -271,32 +271,12 @@
         <table align="center" background="https://api.broskyna.anezka.sk/static/images/email/background-transition.png" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#FFFFFF url(https://api.broskyna.anezka.sk/static/images/email/background-transition.png) top center / 100% 48px no-repeat;width:100%;">
           <tbody>
             <tr>
-              <td style="direction: ltr; font-size: 0px; padding: 0; text-align: center;" align="center">
+              <td style="direction: ltr; font-size: 0px; padding: 0; padding-top: 48px; text-align: center;" align="center">
                 <!--[if mso | IE]>
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 
         <tr>
       
-            <td
-               class="" style=""
-            >
-          
-    
-        <table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td height="48" style="vertical-align:top;height:48;">
-      
-    <![endif]-->
-  
-      <div style="height:48;">
-        &nbsp;
-      </div>
-      
-    <!--[if mso | IE]>
-    
-        </td></tr></table>
-      
-    
-            </td>
-          
         </tr>
       
                   </table>
