--- a/templates/templated_email/compiled/export_products_file.html
+++ b/templates/templated_email/compiled/export_products_file.html
@@ -129,11 +129,11 @@
       <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
         <tbody>
           <tr>
-            <td style="padding: 5px; width: 550px;" width="550">
+            <td style="padding: 5px; width: 169px;" width="169">
               
         <a href="https://anezka.sk/" target="_blank" style="text-decoration: none; color: inherit;">
           
-      <img height="48" src="https://broskyna.anezka.sk/logo-with-years.svg" style="border:0;display:block;outline:none;text-decoration:none;height:48px;width:100%;font-size:13px;" width="550">
+      <img height="48" src="https://broskyna.anezka.sk/logo-with-years.png" style="border:0;display:block;outline:none;text-decoration:none;height:48px;width:100%;font-size:13px;" width="169">
     
         </a>
       
@@ -262,13 +262,13 @@
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       
         <v:rect  style="width:600px;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false">
-        <v:fill  origin="0.5, 0" position="0.5, 0" src="https://api.broskyna.anezka.sk/static/images/email/background-transition.png" color="#FFFFFF" type="tile" />
+        <v:fill  origin="0.5, 0" position="0.5, 0" src="https://api.broskyna.anezka.sk/static/images/email/background-transition.png?1?1" color="#FFFFFF" type="tile" />
         <v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0">
       <![endif]-->
           
-      <div style="background:#FFFFFF url(https://api.broskyna.anezka.sk/static/images/email/background-transition.png) top center / 100% 48px no-repeat;margin:0px auto;max-width:600px;">
+      <div style="background:#FFFFFF url(https://api.broskyna.anezka.sk/static/images/email/background-transition.png?1?1) top center / 100% 48px no-repeat;margin:0px auto;max-width:600px;">
         <div style="line-height:0;font-size:0;">
-        <table align="center" background="https://api.broskyna.anezka.sk/static/images/email/background-transition.png" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#FFFFFF url(https://api.broskyna.anezka.sk/static/images/email/background-transition.png) top center / 100% 48px no-repeat;width:100%;">
+        <table align="center" background="https://api.broskyna.anezka.sk/static/images/email/background-transition.png?1?1" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#FFFFFF url(https://api.broskyna.anezka.sk/static/images/email/background-transition.png?1?1) top center / 100% 48px no-repeat;width:100%;">
           <tbody>
             <tr>
               <td style="direction: ltr; font-size: 0px; padding: 0; padding-top: 48px; text-align: center;" align="center">
